src/objects/MICO_User_Story__c.object
<CustomObject>
    <description>Business Description: This object is used to record User Stories with their acceptance criteria. These are linked to a sprint during sprint planning and delivered throughout the sprint process.

Used In: Mission Control App</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>The Acceptance Criteria for this user story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Acceptance Criteria are the specific, testable and complete needs of this user story. They may follow a structure such as &quot;Given When Then&quot; or list out specific attributes and fields as needed. The Acceptance Criteria are used by developers and testers</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Allocated_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sprint this story has been allocated to. Used for sprint planning and in the burndown
Created on 04/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The sprint that this story has been committed to</inlineHelpText>
        <label>Allocated Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Allocated User Stories</relationshipLabel>
        <relationshipName>MICO_Allocated_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The application this user story will enhance
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The app or application this user story relates to</inlineHelpText>
        <label>App</label>
        <referenceTo>MICO_App__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field is used to capture the status of the approval process in User stories: Created on 06/11/2014 by Preeti Grover:MICO</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_A__c</fullName>
        <description>Used to define the core role using the piece of functionality described by the user story</description>
        <inlineHelpText>The main user type(s) that this story is for.</inlineHelpText>
        <label>(Deprecated) As a...</label>
        <picklist>
            <picklistValues>
                <fullName>Any User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive &amp; Report Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>As_A_text__c</fullName>
        <description>The type of user(s) this story provides functionality for
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The type of user(s) this story is about. Please ensure consistency with your app user groups</inlineHelpText>
        <label>As A...</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BQ_Approval_Status__c</fullName>
        <formula>IF( MICO_Business_Quality_Approved__c = TRUE, &quot;Approved&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BQ Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_Approval_Status__c</fullName>
        <formula>IF( MICO_Computer_Systems_Quality_Approved__c = TRUE, &quot;Approved&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSQ Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>The reason a user story has been cancelled
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The reason this User Story is no longer being considered as valid. This should only be used if the User Story Status has been set to Cancelled</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cirrus_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cirrus release this story will be put in to.
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The Cirrus release this story will be put in to</inlineHelpText>
        <label>Cirrus Release</label>
        <referenceTo>MICO_Release__c</referenceTo>
        <relationshipLabel>User Stories (Cirrus Release)</relationshipLabel>
        <relationshipName>MICO_Cirrus_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Date the user story was Done. Driven by workflow from the status field. Used in reporting
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The date a User Story was completed. This is populated automatically when the USer Story Status is set to Passed (Complete)</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Approve_Date__c</fullName>
        <inlineHelpText>Date this has been reviewed and approved by Compliance</inlineHelpText>
        <label>Compliance Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Compliance_Criteria__c</fullName>
        <description>Compliance / Quality Notes
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Legal, regulatory or compliance related requirements and observations</inlineHelpText>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Compliance_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Business Quality user responsible for this User Story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The Business Quality user responsible for this User Story</inlineHelpText>
        <label>Business Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Computer Systems Quality User responsible for this User Story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The Computer Systems Quality User responsible for this User Story</inlineHelpText>
        <label>Computer Systems Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <description>This field is used to capture the criticality information: Created on 06/11/2014 by Preeti Grover:MICO</description>
        <inlineHelpText>Is this User Story considered Quality Critical</inlineHelpText>
        <label>Quality Critical</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assessed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Computer Systems Quality User responsible for this User Story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The primary Developer responsible for developing this User Story</inlineHelpText>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <description>User story status. This drives burndown, kanban and reporting
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The stage this User Story is at in the Sprint lifecycle. User Stories are &quot;burned&quot; in the Sprint Dashboard when they are set to &quot;Passed (Complete)&quot;</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#663333</color>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
                <color>#999999</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Story Definition</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Development</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Test Release</fullName>
                <color>#66FF99</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Test</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Test</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Passed (Complete)</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Ready for Release</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Released</fullName>
                <color>#006600</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>An external reference that can be used to identify this User Story in another system</inlineHelpText>
        <label>External Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_User_Story__c</fullName>
        <description>Combines the three fields As A. I Want To. So That
Created on 01/07/2014 by SMills 
MICO</description>
        <formula>&quot;As a &quot; &amp;  As_A_text__c  &amp;&quot; I want to &quot; &amp;  I_Want_To__c &amp; &quot; so that &quot; &amp; So_that__c</formula>
        <inlineHelpText>The Complete User Story in the format &quot;As a... I want to... So That...&quot;</inlineHelpText>
        <label>Full User Story</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Services</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing / Multichannel</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>SFA</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics / Insights</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GXP__c</fullName>
        <description>This field is used to capture GXP related information: Created on 06/11/2014 by Preeti Grover: MICO</description>
        <inlineHelpText>Is this User Story considered subject to GxP</inlineHelpText>
        <label>GxP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assessed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_Want_To__c</fullName>
        <description>&quot;I want to&quot; part of the user story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>What the user needs to achieve. 

E.g. 
I want To...Be able to search for customers on different fields (e.g. First Name, Surname, Address, and Product Metrics) in my territory</inlineHelpText>
        <label>I want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if the User Story has legal implications.
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Does this User Story have any legal implications? If checked, please ensure these are detailed in the Compliance Criteria field.</inlineHelpText>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICO_Business_Quality_Approval_Date__c</fullName>
        <label>Business Quality Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MICO_Business_Quality_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>Business Quality Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICO_Computer_System_Qty_Approval_Date__c</fullName>
        <label>Computer Systems Quality Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MICO_Computer_Systems_Quality_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>Computer Systems Quality Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICO_Decision_Taken__c</fullName>
        <label>Decision Taken</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MICO_Overall_Approval_Status__c</fullName>
        <label>Overall Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MICO_Send_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to send user stories for approval: Created on 06/19/2014 by Preeti Grover:MICO</description>
        <label>Send for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICO_System_Custodian_Approval_Date__c</fullName>
        <label>System Custodian Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MICO_System_Custodian_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>System Custodian Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICO_System_Owner_Approval_Date__c</fullName>
        <label>System Owner Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MICO_System_Owner_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>System Owner Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Priority__c</fullName>
        <formula>if(value(text(Priority__c))&gt;0, value(text(Priority__c)), 99 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Functional_Requirement__c</fullName>
        <description>Non Functionals
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The non-functional qualities the solution needs to exhibit. Examples include
Scalability (number of records processed) 
Responsiveness (must respond in x seconds)</inlineHelpText>
        <label>Non Functional Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the epic 
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The high level functionality that this user story could be grouped under</inlineHelpText>
        <label>Parent Epic</label>
        <referenceTo>MICO_Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>MICO_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal project release, prior to joining the Cirrus process
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The internal project release for this user story</inlineHelpText>
        <label>Project Release</label>
        <referenceTo>MICO_Release__c</referenceTo>
        <relationshipLabel>User Stories (Project)</relationshipLabel>
        <relationshipName>MICO_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority of this user story, this is used in sprint planning
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The relative priority of this User Story. 1 is the most important, 99 is the least. This can be used during Sprint Planning</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this User Story have privacy implications
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Flag this when the user story concerns personal identifiable information linked to your process</inlineHelpText>
        <label>Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>The Project responsible for delivering this User Story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The Project responsible for delivering this User Story</inlineHelpText>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>MICO_Project_User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Proposed Sprint. Used in Sprint Planning
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Following Release Planning this User Story can be proposed for a particular sprint. Stories can the be taken in or rejected from this sprint during the Sprint Planning process, as determined by the Product Owner</inlineHelpText>
        <label>Proposed Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Proposed User Stories</relationshipLabel>
        <relationshipName>MICO_Proposed_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QRCode__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chf=bg,s,ffffff&amp;cht=qr&amp;chs=220x220&amp;chl=http://tracker.force.com/QRScan/?id=&apos;&amp; Id&amp;&apos;&amp;chld=|0&apos; , &apos;Scan the QR code to see User Story in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QRCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Completeness_Indicator__c</fullName>
        <description>Icon to show release completeness
Created on 01/07/2014 by SMills 
MICO</description>
        <formula>IF ( Release_Completeness__c , IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Complete&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Complete&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The manual release steps and the validation steps must be completed. If there are none, these must be specifically declared as &quot;N/A&quot;</inlineHelpText>
        <label>Release Completeness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Completeness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field to show release completeness, populated by workflow
Created on 01/07/2014 by SMills 
MICO</description>
        <label>Release Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Impact_Analysis__c</fullName>
        <description>How does this story impact the release: Created by SMatharu on 09/07/2014</description>
        <inlineHelpText>How does this story impact the release?
For example, &quot;because this story modifies overnight batch jobs, if the overnight batches fail, it would require a data fix to be a applied post-release&quot;</inlineHelpText>
        <label>Release Impact Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Impact__c</fullName>
        <description>The impact on the release. Based on the kind of change going through as part of the release: Created by SMatharu on 09/07/2014</description>
        <inlineHelpText>High -  Any batch change, any trigger/validation rule on a &apos;batched&apos; object, any high profile VF Page

Medium -  class/trigger/complex VF page

Low - other</inlineHelpText>
        <label>Release Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Note__c</fullName>
        <description>The release note to be issued to the business regarding this story: Created on 09/07/2014 by SMatharu</description>
        <inlineHelpText>The release note to be issued to the business regarding this story</inlineHelpText>
        <label>Business Release Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Steps_Automated__c</fullName>
        <inlineHelpText>Elements which have to be deployed in an automated way (Eclipse).
Please put N/A when not applicable</inlineHelpText>
        <label>Release Steps (Automated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Steps_Manual__c</fullName>
        <description>List of manual steps needed to deploy this user story.
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Deployment steps that aren&apos;t captured by part of the automated metadata deployment process. Please ensure these are clear, concise, complete and specify whether they are pre or post deployment steps.

Put N/A if none are needed</inlineHelpText>
        <label>Release Steps (Manual)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SC_Approval_Status__c</fullName>
        <formula>IF( MICO_System_Custodian_Approved__c = TRUE, &quot;Approved&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Approval_Status__c</fullName>
        <formula>IF( MICO_System_Owner_Approved__c = TRUE, &quot;Approved&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if the User Story has security implications.
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Does this User Story have any security implications? If checked, please ensure these are detailed in the Compliance Criteria field.</inlineHelpText>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>So_that__c</fullName>
        <description>Business Value of this User Story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Please enter the business value of this User Story. This helps Developers and Business Analysts understand the important essence of what the user needs to ultimately achieve.

I can easily find my  relevant target customer information</inlineHelpText>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sprint_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tester responsible for this User Story
Created on 04/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The Tester responsible for testing this User Story during the sprint</inlineHelpText>
        <label>Sprint Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories_Tester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Points_Other__c</fullName>
        <description>Story points for non SFDC dev
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The level of complexity as estimated in Story Points NOT related to force.com development. For example, related to Integration effort</inlineHelpText>
        <label>Story Points (Other)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points_Total__c</fullName>
        <description>Total Story Points for this story. Sums SFDC and Other Story point fields
Created on 01/07/2014 by SMills 
MICO</description>
        <formula>nullvalue(value(text( Story_Points__c )), 0)  + nullvalue(value(text(  Story_Points_Other__c)),0)</formula>
        <inlineHelpText>The total level of complexity as estimated in Story Points related to delivering this User Story. Includes both SFDC Story Points and Other Story Points</inlineHelpText>
        <label>Story Points Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <description>Story points for SFDC dev
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The level of complexity as estimated in Story Points related to force.com development</inlineHelpText>
        <label>Story Points SFDC</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>